--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 # technické nastavení
 #
 
-title: Your awesome title
-email: info@pirati.cz
+title: Piráti Český Těšín
+email: pirati.tesin@gmail.com
 description: >-
   Zde potří popis webu například stránka místního sdružení. Zobrází se například ve feed/rss nebo ve výsledcích googlu.
 # dobré keywords jsou ty co lidé piší do googlu když hledají naši stránku
@@ -16,14 +16,14 @@ administrator:
   email: to@pirati.cz # mail kam pujdou chybove vystupy
 
 organization:
-  name: Jmeno skupiny používající web - př Pirástá strana
-  shortName: Název skupiny
-  contactUid: jakub.pirat
-  email: example@pirati.cz
-  phone: +420 777 123 456 789
+  name: Pirátrská strana Český Těšín
+  shortName: Piráti Český Těšín
+  contactUid: lukas.chlebik
+  email: pirati.tesin@gmail.com
+  phone: +420 773 453 123
   address: |
-    Řehořova 943/19,
-    130 00 Praha 3
+    Jugoslávská 3038/40A, 
+    70030 Ostrava  -Zábřeh
   residenceImg:
   mapLink: https://mapy.cz/zakladni?vlastni-body&x=14.4418976&y=50.0863156&z=18&ut=PiCe&uc=9h2F.xXwtn&ud=ulice%20%C5%98eho%C5%99ova%20943%2F19%2C%20Praha%2C%20130%2000%2C%20okres%20Hlavn%C3%AD%20m%C4%9Bsto%20Praha
   redmineLink: https://redmine.pirati.cz/projects
@@ -51,16 +51,16 @@ calendar:
   # For nice look of the calendar, make sure you get Google Calendar API key
   # and start the app with the env var `GOOGLE_CALENDAR_APIKEY=[myapikey] bundle exec jekyll serve`.
   # For deployment, contact website administrator to set you env variable.
-  title: Celostátní kalendář
-  id: nk73m1m89vhf5g2vojp6tnqe58@group.calendar.google.com
-  page: https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=500&amp;wkst=2&amp;hl=cs&amp;bgcolor=%23FFFFFF&amp;src=nk73m1m89vhf5g2vojp6tnqe58%40group.calendar.google.com&ctz=Europe%2FPrague&amp;color=%232952A3
+  title: Krajský kalendář
+  id: i7ipksvi9b852grgjic8mnhua0%40group.calendar.google.com
+  page: https://calendar.google.com/calendar/embed?src=i7ipksvi9b852grgjic8mnhua0%40group.calendar.google.com&ctz=Europe%2FPrague
 
 facebook:
   loadSDK: true
   #vyplně adresu vaší stranky, funguje pouze na stránky nikoliv skupiny
-  profilePage: https://www.facebook.com/ceska.piratska.strana/
-  profilePageName: Nějaký název FB profilu
-  appId: 1526197851008996
+  profilePage: https://www.facebook.com/piratitesin/
+  profilePageName: Piráti Těšín
+  appId: 461565994343599
 
 twitter:
   loadSDK: true
